--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ main {
 
 .team-members {
     margin-top: 50px;
-    
+    padding-right: 50px;
+    width: calc(100% / 3);
+    float:left;
     
  
 }
@@ -50,8 +52,7 @@ main {
 
 .cards {
  
-    width: calc(100% / 3);
-    float:left;
+
     height: 100px;
     border: 2px solid yellow;
     color: white;
@@ -83,8 +84,3 @@ main {
     padding-top: 10px;
 }
 
-.empty {
-
-    width: 50px;
-    height: 50px;
-}
