--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ box-sizing: border-box;
 
 h1 {
     text-align: center;
-    color: fuchsia;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(37, 150, 190);
+    font-family: 'Fredoka One', cursive;
     margin-bottom: 50px;
     padding-top: 50px;
 
@@ -16,18 +16,21 @@ h1 {
 h2 {
     font-size: 15px;
     margin-bottom: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h3 {
 
     font-size: 12px;
     margin-bottom: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 100;
 }
 
 .cards span {
 
-    color: blue;
-    font-size: 8px;
+    color: rgb(130, 192, 237);
+    font-size: 15px;
 }
 
 p {
@@ -54,7 +57,6 @@ main {
  
 
     height: 100px;
-    border: 2px solid yellow;
     color: white;
     background-color: black;
     box-shadow: 5px 0px 15px black ;
