--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 
 h1 {
     text-align: center;
-    color: rgb(37, 150, 190);
+    color: rgba(229,48,112,255);
     font-family: 'Fredoka One', cursive;
     margin-bottom: 50px;
     padding-top: 50px;
